@@ -47,6 +47,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Make keep aspect ratio checkbox in resize dialog keep the current aspect ratio, not the original one.
  * Fix: Don't act like keep aspect ratio is checked when resizing from a selection. Thanks Meru for reporting.
  * Fix: Make onion skin color partially transparent by default so that they don't turn into solid blocks on colored stuff. Thanks BulletPepper for reporting.
+ * Fix: Clarify the host dialog by adding additional messages that explain common sources of confusion, such as the title being required, the password being necessary to host a private session and "host on this computer" requiring port forwarding.
 
 2023-11-12 Version 2.2.0-beta.10
  * Fix: Don't deadlock on first startup. Thanks to Hail, lowontrash, FARBOL234, Dorokinyo and hamlin for reporting.
